Only prevent label's text wrapping in the FormView.

--- a/stylesheets/flame.css.scss
+++ b/stylesheets/flame.css.scss
@@ -26,10 +26,6 @@ body {
 }
 
 .flame-label-view {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-
     &.is-disabled {
         color: #999;
     }
